<resources>
    <string name="app_name">PopMovie</string>
    <string name="title_activity_home">Themes</string>
    <string name="title_home">Blind tests Themes</string>
    <string name="USER_LIKE_KEY" translatable="false">USER_LIKE_KEY</string>
    <string name="SEEN_MOVIES_KEY" translatable="false">SEEN_MOVIES_KEY</string>
    <string name="BUG_MOVIES_KEY" translatable="false">BUG_MOVIES_KEY</string>
    <string name="THEME_PLAYED_KEY" translatable="false">BUG_MOVIES_KEY</string>
    <string name="stared">Stared</string>
    <string name="top">Top</string>
    <string name="top_movies">Top Movies</string>
    <string name="movie_details">Movie Details</string>
    <string name="search">Search</string>
    <string name="like">Like</string>
    <string name="unlike">Unlike</string>
    <string name="collection">Collection :</string>
    <string name="production_companies">"Production Companies "</string>
    <string name="synopsis">Synopsis :</string>
    <string name="budget">Budget</string>
    <string name="revenue">Revenue</string>
    <string name="average_rate">Rate</string>
    <string name="genres">Genres :</string>
    <string name="release_date">Release</string>
    <string name="api_language_key">en-US</string>
    <string name="start_blindtest">Start Blindtest</string>
    <string name="blindtest_page_title">Movie Blindtest</string>
    <string name="user_settings_title">User\'s Settings</string>
    <string name="logout">Logout</string>
    <string name="delete_user">Delete Account</string>
    <string name="login_failed">Login Failed</string>
    <string name="api_region_key">US</string>
    <string name="language_iso639">en</string>
    <string name="validate_movie">Validate</string>
    <string name="next_movie">Next</string>
    <string name="language_is">Language</string>
    <string name="good_response">Correct answer ! (%d points)</string>
    <string name="not_good_movie">Wrong movie, not %s ! (%d points)</string>
    <string name="top_rated_cardname">Best Movies</string>
    <string name="heigthies_cardname">80\'s Movies</string>
    <string name="japanese_animation_cardname">Japanese Animation</string>
    <string name="french_2010_cardname">French 2010-2020</string>
    <string name="param">Customize</string>
    <string name="horror_cardname">Horror</string>
    <string name="science_fiction_cardname">Science Fiction</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="popularity">Popularity</string>
    <string name="most">With the top</string>
    <string name="in_the">In the</string>
    <string name="movies">Movies</string>
    <string name="with_genres">Genres :</string>
    <string name="with_language">Language :</string>

    <string-array name="language_array">
        <item>English</item>
        <item>French</item>
        <item>Japanese</item>
        <item>Spanish</item>
        <item>Italian</item>
    </string-array>
    <string-array name="notify_array">
        <item>Movie Name at the beginning of the trailer</item>
        <item>Inappropriate Trailer</item>
        <item>Other error</item>
    </string-array>
    <string name="load_error_not_enough_movies">Not enough unseen movies</string>
    <string name="remove_all_seen_movies">Forget all seen movies</string>
    <string name="all_seen_movies_removed">All seen movies forgotten !</string>
    <string name="seen">Seen</string>
    <string name="trailer">Trailer :</string>
    <string name="provided_by">Service provided by :</string>
    <string name="developped_by">Developped by :</string>
    <string name="user">User</string>
    <string name="application">Application</string>
    <string name="cast">Cast :</string>
    <string name="crew">Crew :</string>
    <string name="loading">Looking for an appropriate movie ...</string>
    <string name="no_response">No response</string>
    <string name="war_cardname">War</string>
    <string name="crime_thriller_cardname">Crime Thriller</string>
    <string name="american_comedy_cardname">US Comedy</string>
    <string name="western_cardname">Western</string>
    <string name="american_animation_cardname">US Animation</string>
    <string name="romance_cardname">Romance</string>
    <string name="american_movies_30_60_cardname">US 1930-1960</string>
    <string name="action_movies_90s_cardname">90\'s Action Movies</string>
    <string name="worst_movies_cardname">Worst Ratings</string>
    <string name="loading_trailer">Trailer Loading ...</string>
    <string name="notify_trailer_bug">Notify Issue</string>
    <string name="send_notify">Send</string>
    <string name="cancel">Cancel</string>
    <string name="end_blindtest">Return to main menu</string>
    <string name="result_next_text">Replay on this %s :</string>
    <string name="not_connection">No Internet connection !</string>
    <string name="no_stared_movies">No stared movies ...</string>
    <string name="no_seen_movies">No seen movies ...</string>
    <string name="result_text">%s finished with %d%s correct answers and %d%s points !</string>
    <string name="user_language_preference">Language preference order</string>
    <string name="user_movies_seen">Seen movies</string>
    <string name="blindtest_init_text">Scroll in the list and find the right movie !</string>
    <string name="analytics_deactivated" translatable="false">false</string>
    <string name="video_player_error">Video player error</string>
    <string name="_2020" translatable="false">2020</string>
    <string name="_2019" translatable="false">2019</string>
    <string name="number_played_line">%d movies</string>
    <string name="expected_number_line">/ %d</string>
    <string name="other_fragment">Other Games</string>
    <string name="param_title">Customize Blind test</string>
    <string name="good_or_bad_game">Good or Bad Movie</string>
    <string name="rate_of_this_movie">What is the rate of this movie ?</string>
    <string name="not_right_rate">Wrong rate ! (%d points)</string>
    <string name="game">Game</string>
    <string name="theme">Theme</string>
    <string name="musical_cardname">Musical</string>
</resources>