<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_top"
        android:name="com.matthieu_louf.movie_blindtest_app.pages.paramPage.ParamFragment"
        android:label="@string/param"
        tools:layout="@layout/fragment_param" />
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.matthieu_louf.movie_blindtest_app.pages.homePage.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_movies"
        android:name="com.matthieu_louf.movie_blindtest_app.pages.savedMoviesPage.TabedFragment"
        android:label="@string/movies"
        tools:layout="@layout/fragment_tabed" />
</navigation>